--- a/style.css
+++ b/style.css
@@ -162,6 +162,9 @@ ________________________
 
 .item1{
     background-color: rgb(255, 190, 225);
+    position: sticky;
+    top: 50px;
+    left: 50px;
 }
 
 .item2{
@@ -190,6 +193,25 @@ ________________________
     margin: 10px;
     font-size: 25px;
 }
+.font__1em {
+    font-size: 2em;
+}
+.font__1rem {
+    font-size: 1rem;
+}
+.font__100percent {
+    font-size: 100%;
+
+}
+.font__2em {
+    font-size: 2em;
+}
+.font__2rem {
+    font-size: 2rem;
+}
+.font__200percent {
+    font-size: 200%;
+}
 
 
 /*
@@ -202,6 +224,13 @@ ________________________
     justify-content: center;
     align-items: center;
 }
+/*
+flex-flow:column-reverse;
+flex-wrap:wrap-reverse;
+justify-content:center;
+align-content:space-between;
+*/
+
 
 /*
 ________________________
@@ -213,7 +242,15 @@ ________________________
     width: 90vw;
     margin-bottom: 50px;
     background-color: var(--primary-100);
+    
 }
+@media  screen and (max-width : 600px) {
+    .media__container{
+        background-color: var(--primary-600);
+    }
+    
+}
+
 /* Extra small devices (phones, 600px and down) */
 
 
